--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -19,6 +19,12 @@
   {% endif %}
   {% if page.image %}
     <meta property="og:image" content="https://www.mediasuite.co.nz{{ page.image }}">
+    {% if page.imageWidth %}
+      <meta property="og:image:width" content="{{ page.imageWidth }}">
+    {% endif %}
+    {% if page.imageHeight %}
+      <meta property="og:image:height" content="{{ page.imageHeight }}">
+    {% endif %}
   {% endif %}
   <meta name="twitter:card" content="summary_large_image">
 
