--- a/src/_includes/other-case-studies.html
+++ b/src/_includes/other-case-studies.html
@@ -60,16 +60,16 @@
   </div> <!-- .case-study-item -->
   {% endif %}
 
-  {% if page.casestudyid != 1 %}
+  {% if page.casestudyid != 9 %}
   <div class="case-study-item clearfix">
-    <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="item-image">
+    <a href="{{ "/case-studies/journeys" | prepend: site.baseurl }}" class="item-image">
       <img src="{{ "/img/case-studies/cs-item-transport-for-christchurch.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
     </a>
     <div class="item-text">
       <div class="item-text-head">
-        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}">Transport for Christchurch</a></h2>
-        <h3 class="item-sub-heading"><a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}">Christchurch City Council/NZTA</a></h3><br>
-        <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
+        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/journeys" | prepend: site.baseurl }}">Journeys</a></h2>
+        <h3 class="item-sub-heading"><a href="{{ "/case-studies/journeys" | prepend: site.baseurl }}">NZ Transport Agency</a></h3><br>
+        <a href="{{ "/case-studies/journeys" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
       </div>
     </div> <!-- .item-text -->
   </div> <!-- .case-study-item -->
