--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -58,5 +58,14 @@
     ga('create', 'UA-1601711-8', 'auto');
     ga('send', 'pageview');
   </script>
-
+  
+  <script type='text/javascript'>
+    window.__lo_site_id = 126434;
+    
+      (function() {
+        var wa = document.createElement('script'); wa.type = 'text/javascript'; wa.async = true;
+        wa.src = 'https://d10lpsik1i8c69.cloudfront.net/w.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(wa, s);
+        })();
+      </script>
 </head>
