Add data.govt case study to landing pages

--- a/src/_includes/other-case-studies.html
+++ b/src/_includes/other-case-studies.html
@@ -1,5 +1,20 @@
 <div class="other-case-studies max-760">
 
+  {% if page.casestudyid != 10 %}
+    <div class="case-study-item clearfix">
+      <a href="{{ "/case-studies/data-govt-nz" | prepend: site.baseurl }}" class="item-image">
+        <img src="{{ "/img/case-studies/cs-item-data-govt-nz.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
+      </a>
+      <div class="item-text">
+        <div class="item-text-head">
+          <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/data-govt-nz" | prepend: site.baseurl }}">data.govt.nz</a></h2>
+          <h3 class="item-sub-heading"><a href="{{ "/case-studies/data-govt-nz" | prepend: site.baseurl }}">StatsNZ and The Department of Internal Affairs</a></h3><br>
+          <a href="{{ "/case-studies/data-govt-nz" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
+        </div>
+      </div>
+    </div>
+  {% endif %}
+
   {% if page.casestudyid != 6 %}
   <div class="case-study-item clearfix">
     <a href="{{ "/case-studies/resource-consenting" | prepend: site.baseurl }}" class="item-image">
