--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,7 +21,7 @@ body {
 
 html {
   font-family: 'Open Sans', serif;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 62.5%;
   background: #fff;
   color: #000;
@@ -122,7 +122,7 @@ body {
 
 .open-sans {
   font-family: 'Open Sans', serif;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .bold {
@@ -135,6 +135,7 @@ img {
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   color: inherit;
+  text-decoration: none;
 }
 
 h1, h2, h3, h4,
@@ -156,8 +157,14 @@ strong {
 }
 
 a {
-  text-decoration: none;
-  color: #f27c00;
+  color: #DB3700;
+  text-decoration: underline;
+  font-weight: 700;
+  transition: color 400ms ease;
+}
+
+a:hover {
+  color: #ff632e;
 }
 
 .js-image-fill {
@@ -179,6 +186,8 @@ a {
 .text-black,
 .text-black a {
   color: #000;
+  font-weight: 400;
+  text-decoration: none;
 }
 
 .lowercase {
@@ -293,11 +302,13 @@ a {
   border-bottom: 2px solid #e84a04;
   overflow:hidden;
   text-align: center;
+  text-decoration: none;
 }
 
 .drop-btn:hover {
   text-shadow: -2px 1px 2px rgba(0,0,0,0.3);
   box-shadow: -1px 2px 1px rgba(0,0,0,0.3);
+  color: #fff;
 }
 
 .drop-btn:after {
@@ -480,6 +491,7 @@ a {
 
 #page-header a {
   pointer-events: auto;
+  text-decoration: none;
 }
 
 #page-header.on {
@@ -565,6 +577,7 @@ a {
 
 #home-panel-nav a {
   color: inherit;
+  text-decoration: none;
 }
 
 #home-nav-logo {
@@ -640,6 +653,7 @@ a {
 
 #main-menu a {
   color: inherit;
+  text-decoration: none;
 }
 
 .close-menu-wrap {
@@ -945,6 +959,7 @@ a {
   color: #fff;
   text-align: center;
   padding-right: 8px;
+  text-decoration: none;
 }
 
 .hiring-text {
