--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1939,6 +1939,7 @@ a.crumb:hover,
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  text-decoration: none;
 }
 
 .grid-sizer {
