--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1169,8 +1169,12 @@ a:hover {
   font-family: 'chelthmitc_bk_btbold_italic', serif;
   margin-bottom: 20px;
   font-size: 2.5rem;
-  line-height: 5rem;
+  line-height: 1.2;
   text-transform: lowercase;
+}
+
+#culture-col-2 ul li {
+  margin-bottom: 30px;
 }
 
 .home-team-img {
@@ -4698,7 +4702,7 @@ address {
     float: right;
     margin-right: 45px;
     text-align: right;
-    margin-top: 20px;
+    margin-top: 85px;
   }
 
   #culture-col-3 {
@@ -4712,7 +4716,7 @@ address {
   }
 
   #culture-col-2 ul {
-    margin-bottom: 42px;
+    margin-bottom: 90px;
   }
 
   #culture-col-2 .drop-btn,
