--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4858,6 +4858,11 @@ address {
     width: 455px;
   }
 
+  /* Hacky fix for Elliot's drum hands... */
+  #person-elliot .bio-wrap {
+    margin-left: 50px;
+  }
+
   .bio-inner {
     width: 455px;
   }
