Interlead Connector case study links
Updated old appraisal connector links

--- a/src/_includes/other-case-studies.html
+++ b/src/_includes/other-case-studies.html
@@ -107,14 +107,14 @@
 
   {% if page.casestudyid != 3 %}
   <div class="case-study-item clearfix">
-    <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="item-image">
+    <a href="{{ "/case-studies/interlead-connector" | prepend: site.baseurl }}" class="item-image">
       <img src="{{ "/img/case-studies/cs-item-appraisal-connector.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
     </a>
     <div class="item-text">
       <div class="item-text-head">
-        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Appraisal Connector</a></h2>
-        <h3 class="item-sub-heading"><a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Interlead Consultants</a></h3><br>
-        <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
+        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/interlead-connector" | prepend: site.baseurl }}">Interlead Connector</a></h2>
+        <h3 class="item-sub-heading"><a href="{{ "/case-studies/interlead-connector" | prepend: site.baseurl }}">Interlead Consultants</a></h3><br>
+        <a href="{{ "/case-studies/interlead-connector" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
       </div>
     </div> <!-- .item-text -->
   </div> <!-- .case-study-item -->
